--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Fancy Horror
-email: fancyhorro@gmail.com
+email: fancyhorror@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Copyright © 2021, Fancy Horror.
+  Whimsical escapes, dependable rhythms.
+footer1: Copyright © 2021, Fancy Horror.
+footer2: Whimsical escapes, dependable rhythms.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: fancyhorror
+github_username:  fancyhorror
 
 # Build settings
 theme: minima
