--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ header_pages:
   - about.markdown
   - contact.markdown
   - music.markdown
+  - news.markdown
   - upcoming-shows.markdown
   - videos.markdown
 
