update facebook link

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ minima:
   social_links:
     twitter: fancyhorror
     github: fancyhorror
-    facebook: poop
+    facebook: fancyhorror
     instagram: fancyhorror
     youtube_channel: UC_HwKLgrBpiDCCk1dxop1NQ
     twitch: fancyhorror
